--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -41,7 +41,7 @@
       "metadata": {
         "id": "s07c7JK7Oqt-"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,12 +52,12 @@
       ],
       "metadata": {
         "id": "6mGVa3SQYLkb",
+        "outputId": "a422f001-dbb1-4976-c9ae-4f251c4b4509",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4414277e-b671-4b8b-c10c-feff88681032"
+        }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,28 +82,30 @@
     {
       "cell_type": "code",
       "source": [
-        "planet=\"Earth\"\n",
-        "diameter=12742\n"
+        "planet = \"Earth\"\n",
+        "diameter = 12742"
       ],
       "metadata": {
         "id": "_ZHoml3kPqic"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "planet=\"Earth\"\n",
+        "diameter=12742\n",
         "print('The diameter of {}is {} kilometer.'.format (planet,diameter));"
       ],
       "metadata": {
         "id": "HyRyJv6CYPb4",
+        "outputId": "255edb40-5155-426e-f306-4b9d03f14642",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bf65edc2-17f1-4dcb-a125-a65e5ee39b63"
+        }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +133,7 @@
       "metadata": {
         "id": "fcVwbCc1QrQI"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,12 +143,12 @@
       ],
       "metadata": {
         "id": "MvbkMZpXYRaw",
+        "outputId": "0523d17c-ac96-4f16-8eb5-b38fdb20a1d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "13a96f64-180a-4880-97f8-88af1676bade"
+        }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +176,7 @@
       "metadata": {
         "id": "LLiE_TYrhA1O"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,12 +199,12 @@
       ],
       "metadata": {
         "id": "NHrirmgCYXvU",
+        "outputId": "dd4703f7-8854-47b3-90e0-b1e9d1a927f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "19291960-889b-463b-9f3d-0bcbc56812b0"
+        }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,12 +225,12 @@
       ],
       "metadata": {
         "id": "e4005lsTYXxx",
+        "outputId": "dd5fa21c-d524-4bd1-e4c5-deb196fc3521",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "266d7fd9-3700-4c8f-8a96-c3d04118041c"
+        }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,18 +254,19 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
         "array=np.arange(20,36,2)\n",
         "print(\"Array of all the even integers from 20 to 35\")\n",
-        "print(array) \n"
+        "print(array)"
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
+        "outputId": "c4d1865e-c373-4c85-b7b7-f2a9f5558cc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b6308e8c-3714-446b-d539-d694e8a0c679"
+        }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,16 +291,16 @@
       "cell_type": "code",
       "source": [
         "x =  np.arange(0, 9).reshape(3,3)\n",
-        "print(x)\n"
+        "print(x)"
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
+        "outputId": "b463d4eb-8da0-4461-d284-70f97cca641b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e6886647-a249-4baf-f259-28d626c3ecce"
+        }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +316,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 7. Concatinate a and b \n",
+        "## 7. Concatenate a and b \n",
         "## a = np.array([1, 2, 3]), b = np.array([4, 5, 6])"
       ],
       "metadata": {
@@ -329,12 +332,12 @@
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
+        "outputId": "c773724d-82b9-4ef1-9eb0-aa598e734132",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3a38ca35-2d34-4e82-84dd-5450b7262bb4"
+        }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -344,7 +347,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 13
         }
       ]
     },
@@ -367,13 +370,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "Yj3aFkThndJc"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n"
@@ -381,30 +377,41 @@
       "metadata": {
         "id": "T5OxJRZ8uvR7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "p = np.arange(6).reshape(3,2)"
+        "import numpy as np"
       ],
       "metadata": {
-        "id": "O3YypXXSmfBT"
+        "id": "xNpI_XXoYhs0"
       },
-      "execution_count": 26,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p=np.arange(6).reshape(3,2)"
+      ],
+      "metadata": {
+        "id": "rXZSxO5RKOIO"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "label1=['a','b','c']\n",
-        "label2=['A','B',]"
+        "label2=['A','B',]\n"
       ],
       "metadata": {
-        "id": "wf1Lq7ITmoKr"
+        "id": "yKlRadeuKcTq"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -413,13 +420,13 @@
         "p"
       ],
       "metadata": {
+        "id": "lgHO-aAhKuxj",
+        "outputId": "91889118-7dcd-463a-eafc-1aa5b5403dab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "AP86G5Xbmnyk",
-        "outputId": "a95cb9ce-2065-4d93-d2f6-7f264f21ee40"
+        }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,35 +438,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 26
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df = pd.DataFrame(p,index= label1, columns = label2)"
+        "df = pd.DataFrame(p,index=label1,columns = label2)"
       ],
       "metadata": {
-        "id": "eqXoU2K7m3ch"
+        "id": "7jtXLF4_K1rN"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df"
+        "df\n"
       ],
       "metadata": {
+        "id": "eUWHFbmQMVcW",
+        "outputId": "7834b541-3085-457c-bc05-7e5a464fa5e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        },
-        "id": "QuC1Y_w0m3PX",
-        "outputId": "9d308e8c-486b-4312-b26a-9c86b85f22fe"
+        }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +479,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a53e4c3e-82e7-4c7d-bcca-fc8c53ed42ed\">\n",
+              "  <div id=\"df-c63b4a5f-2d1b-40da-95d2-ca393cbdea62\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -515,7 +522,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a53e4c3e-82e7-4c7d-bcca-fc8c53ed42ed')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c63b4a5f-2d1b-40da-95d2-ca393cbdea62')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -566,12 +573,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a53e4c3e-82e7-4c7d-bcca-fc8c53ed42ed button.colab-df-convert');\n",
+              "          document.querySelector('#df-c63b4a5f-2d1b-40da-95d2-ca393cbdea62 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a53e4c3e-82e7-4c7d-bcca-fc8c53ed42ed');\n",
+              "          const element = document.querySelector('#df-c63b4a5f-2d1b-40da-95d2-ca393cbdea62');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -594,7 +601,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 35
         }
       ]
     },
@@ -614,12 +621,12 @@
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F",
+        "outputId": "a58c392c-8499-4ca5-a997-99a57a3ecff8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "44d34b74-f208-43b9-dfb1-328a9d147abe"
+        }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +676,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 19
         }
       ]
     },
@@ -694,23 +701,24 @@
       "metadata": {
         "id": "_XMC8aEt0llB"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "lists = [[1, 'aaa', 22], [2, 'bbb', 25], [3, 'ccc', 24]]\n",
         "df = pd.DataFrame(lists, columns =['A', 'B','C']) \n",
         "print(df )"
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
+        "outputId": "898c7c11-6f03-498e-e6b4-899112cf3825",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "21651cbe-331b-477f-a0d2-aba58ea54fa7"
+        }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
