--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/IBM-EPBL/IBM-Project-3945-1658673308/blob/main/Assignment_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -52,7 +63,7 @@
       ],
       "metadata": {
         "id": "6mGVa3SQYLkb",
-        "outputId": "a422f001-dbb1-4976-c9ae-4f251c4b4509",
+        "outputId": "4414277e-b671-4b8b-c10c-feff88681032",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -82,8 +93,8 @@
     {
       "cell_type": "code",
       "source": [
-        "planet = \"Earth\"\n",
-        "diameter = 12742"
+        "planet=\"Earth\"\n",
+        "diameter=12742\n"
       ],
       "metadata": {
         "id": "_ZHoml3kPqic"
@@ -94,13 +105,11 @@
     {
       "cell_type": "code",
       "source": [
-        "planet=\"Earth\"\n",
-        "diameter=12742\n",
         "print('The diameter of {}is {} kilometer.'.format (planet,diameter));"
       ],
       "metadata": {
         "id": "HyRyJv6CYPb4",
-        "outputId": "255edb40-5155-426e-f306-4b9d03f14642",
+        "outputId": "bf65edc2-17f1-4dcb-a125-a65e5ee39b63",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -143,7 +152,7 @@
       ],
       "metadata": {
         "id": "MvbkMZpXYRaw",
-        "outputId": "0523d17c-ac96-4f16-8eb5-b38fdb20a1d9",
+        "outputId": "13a96f64-180a-4880-97f8-88af1676bade",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -199,7 +208,7 @@
       ],
       "metadata": {
         "id": "NHrirmgCYXvU",
-        "outputId": "dd4703f7-8854-47b3-90e0-b1e9d1a927f6",
+        "outputId": "19291960-889b-463b-9f3d-0bcbc56812b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -225,7 +234,7 @@
       ],
       "metadata": {
         "id": "e4005lsTYXxx",
-        "outputId": "dd5fa21c-d524-4bd1-e4c5-deb196fc3521",
+        "outputId": "266d7fd9-3700-4c8f-8a96-c3d04118041c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -254,14 +263,13 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
         "array=np.arange(20,36,2)\n",
         "print(\"Array of all the even integers from 20 to 35\")\n",
-        "print(array)"
+        "print(array) \n"
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
-        "outputId": "c4d1865e-c373-4c85-b7b7-f2a9f5558cc6",
+        "outputId": "b6308e8c-3714-446b-d539-d694e8a0c679",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -291,11 +299,11 @@
       "cell_type": "code",
       "source": [
         "x =  np.arange(0, 9).reshape(3,3)\n",
-        "print(x)"
+        "print(x)\n"
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
-        "outputId": "b463d4eb-8da0-4461-d284-70f97cca641b",
+        "outputId": "e6886647-a249-4baf-f259-28d626c3ecce",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -316,7 +324,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 7. Concatenate a and b \n",
+        "## 7. Concatinate a and b \n",
         "## a = np.array([1, 2, 3]), b = np.array([4, 5, 6])"
       ],
       "metadata": {
@@ -332,7 +340,7 @@
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
-        "outputId": "c773724d-82b9-4ef1-9eb0-aa598e734132",
+        "outputId": "3a38ca35-2d34-4e82-84dd-5450b7262bb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -347,7 +355,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 24
         }
       ]
     },
@@ -370,6 +378,13 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Yj3aFkThndJc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n"
@@ -383,21 +398,10 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np"
+        "p = np.arange(6).reshape(3,2)"
       ],
       "metadata": {
-        "id": "xNpI_XXoYhs0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "p=np.arange(6).reshape(3,2)"
-      ],
-      "metadata": {
-        "id": "rXZSxO5RKOIO"
+        "id": "O3YypXXSmfBT"
       },
       "execution_count": null,
       "outputs": []
@@ -406,10 +410,10 @@
       "cell_type": "code",
       "source": [
         "label1=['a','b','c']\n",
-        "label2=['A','B',]\n"
+        "label2=['A','B',]"
       ],
       "metadata": {
-        "id": "yKlRadeuKcTq"
+        "id": "wf1Lq7ITmoKr"
       },
       "execution_count": null,
       "outputs": []
@@ -420,8 +424,8 @@
         "p"
       ],
       "metadata": {
-        "id": "lgHO-aAhKuxj",
-        "outputId": "91889118-7dcd-463a-eafc-1aa5b5403dab",
+        "id": "AP86G5Xbmnyk",
+        "outputId": "a95cb9ce-2065-4d93-d2f6-7f264f21ee40",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -438,17 +442,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 28
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df = pd.DataFrame(p,index=label1,columns = label2)"
+        "df = pd.DataFrame(p,index= label1, columns = label2)"
       ],
       "metadata": {
-        "id": "7jtXLF4_K1rN"
+        "id": "eqXoU2K7m3ch"
       },
       "execution_count": null,
       "outputs": []
@@ -456,11 +460,11 @@
     {
       "cell_type": "code",
       "source": [
-        "df\n"
+        "df"
       ],
       "metadata": {
-        "id": "eUWHFbmQMVcW",
-        "outputId": "7834b541-3085-457c-bc05-7e5a464fa5e3",
+        "id": "QuC1Y_w0m3PX",
+        "outputId": "9d308e8c-486b-4312-b26a-9c86b85f22fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
@@ -479,7 +483,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c63b4a5f-2d1b-40da-95d2-ca393cbdea62\">\n",
+              "  <div id=\"df-a53e4c3e-82e7-4c7d-bcca-fc8c53ed42ed\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -522,7 +526,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c63b4a5f-2d1b-40da-95d2-ca393cbdea62')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a53e4c3e-82e7-4c7d-bcca-fc8c53ed42ed')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -573,12 +577,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c63b4a5f-2d1b-40da-95d2-ca393cbdea62 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a53e4c3e-82e7-4c7d-bcca-fc8c53ed42ed button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c63b4a5f-2d1b-40da-95d2-ca393cbdea62');\n",
+              "          const element = document.querySelector('#df-a53e4c3e-82e7-4c7d-bcca-fc8c53ed42ed');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -601,7 +605,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 30
         }
       ]
     },
@@ -621,7 +625,7 @@
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F",
-        "outputId": "a58c392c-8499-4ca5-a997-99a57a3ecff8",
+        "outputId": "44d34b74-f208-43b9-dfb1-328a9d147abe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -676,7 +680,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 31
         }
       ]
     },
@@ -707,13 +711,12 @@
     {
       "cell_type": "code",
       "source": [
-        "lists = [[1, 'aaa', 22], [2, 'bbb', 25], [3, 'ccc', 24]]\n",
         "df = pd.DataFrame(lists, columns =['A', 'B','C']) \n",
         "print(df )"
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
-        "outputId": "898c7c11-6f03-498e-e6b4-899112cf3825",
+        "outputId": "21651cbe-331b-477f-a0d2-aba58ea54fa7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
