--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/IBM-EPBL/IBM-Project-3945-1658673308/blob/main/Assignment_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -52,7 +41,7 @@
       "metadata": {
         "id": "s07c7JK7Oqt-"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -63,12 +52,12 @@
       ],
       "metadata": {
         "id": "6mGVa3SQYLkb",
-        "outputId": "4414277e-b671-4b8b-c10c-feff88681032",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4414277e-b671-4b8b-c10c-feff88681032"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +88,7 @@
       "metadata": {
         "id": "_ZHoml3kPqic"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -109,12 +98,12 @@
       ],
       "metadata": {
         "id": "HyRyJv6CYPb4",
-        "outputId": "bf65edc2-17f1-4dcb-a125-a65e5ee39b63",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bf65edc2-17f1-4dcb-a125-a65e5ee39b63"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +131,7 @@
       "metadata": {
         "id": "fcVwbCc1QrQI"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -152,12 +141,12 @@
       ],
       "metadata": {
         "id": "MvbkMZpXYRaw",
-        "outputId": "13a96f64-180a-4880-97f8-88af1676bade",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "13a96f64-180a-4880-97f8-88af1676bade"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +174,7 @@
       "metadata": {
         "id": "LLiE_TYrhA1O"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -208,12 +197,12 @@
       ],
       "metadata": {
         "id": "NHrirmgCYXvU",
-        "outputId": "19291960-889b-463b-9f3d-0bcbc56812b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "19291960-889b-463b-9f3d-0bcbc56812b0"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,12 +223,12 @@
       ],
       "metadata": {
         "id": "e4005lsTYXxx",
-        "outputId": "266d7fd9-3700-4c8f-8a96-c3d04118041c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "266d7fd9-3700-4c8f-8a96-c3d04118041c"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,12 +258,12 @@
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
-        "outputId": "b6308e8c-3714-446b-d539-d694e8a0c679",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b6308e8c-3714-446b-d539-d694e8a0c679"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,12 +292,12 @@
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
-        "outputId": "e6886647-a249-4baf-f259-28d626c3ecce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e6886647-a249-4baf-f259-28d626c3ecce"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,12 +329,12 @@
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
-        "outputId": "3a38ca35-2d34-4e82-84dd-5450b7262bb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3a38ca35-2d34-4e82-84dd-5450b7262bb4"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,7 +381,7 @@
       "metadata": {
         "id": "T5OxJRZ8uvR7"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -403,7 +392,7 @@
       "metadata": {
         "id": "O3YypXXSmfBT"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -415,7 +404,7 @@
       "metadata": {
         "id": "wf1Lq7ITmoKr"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -424,13 +413,13 @@
         "p"
       ],
       "metadata": {
-        "id": "AP86G5Xbmnyk",
-        "outputId": "a95cb9ce-2065-4d93-d2f6-7f264f21ee40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AP86G5Xbmnyk",
+        "outputId": "a95cb9ce-2065-4d93-d2f6-7f264f21ee40"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -454,7 +443,7 @@
       "metadata": {
         "id": "eqXoU2K7m3ch"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -463,14 +452,14 @@
         "df"
       ],
       "metadata": {
-        "id": "QuC1Y_w0m3PX",
-        "outputId": "9d308e8c-486b-4312-b26a-9c86b85f22fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "QuC1Y_w0m3PX",
+        "outputId": "9d308e8c-486b-4312-b26a-9c86b85f22fe"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,12 +614,12 @@
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F",
-        "outputId": "44d34b74-f208-43b9-dfb1-328a9d147abe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "44d34b74-f208-43b9-dfb1-328a9d147abe"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +694,7 @@
       "metadata": {
         "id": "_XMC8aEt0llB"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -716,12 +705,12 @@
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
-        "outputId": "21651cbe-331b-477f-a0d2-aba58ea54fa7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "21651cbe-331b-477f-a0d2-aba58ea54fa7"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
