--- a/Project Design & Planning/Project Development Phase/Sprint3/Sprint3.ipynb
+++ b/Project Design & Planning/Project Development Phase/Sprint3/Sprint3.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -40,7 +41,7 @@
       "metadata": {
         "id": "7c50e0RXiRmy"
       },
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -58,23 +59,10 @@
         "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yvZ39xJiiaSJ",
-        "outputId": "175de592-2146-4130-c14c-1212a06518a0"
+        "id": "yvZ39xJiiaSJ"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-            "11490434/11490434 [==============================] - 0s 0us/step\n"
-          ]
-        }
-      ]
+      "execution_count": 18,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -96,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oEzmGUECi_wK",
-        "outputId": "c0119333-8010-48ad-941b-7ecb017c359a"
+        "outputId": "1f9205cb-720d-4868-a769-3e3ebb610a2d"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,9 +108,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iwuyVpnsjDGK",
-        "outputId": "0233e8c9-3093-4945-97f8-4c526ebf4061"
+        "outputId": "40a097a2-9087-4750-b933-a65cff1e4ae7"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -215,7 +203,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 21
         }
       ]
     },
@@ -229,9 +217,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-P79YE7XjGqt",
-        "outputId": "f6fa5e3f-9837-4edc-bbe8-cd17ce50d31f"
+        "outputId": "08643e73-d46c-4827-b9d4-6727982b8c20"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +229,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 22
         }
       ]
     },
@@ -256,19 +244,19 @@
           "height": 282
         },
         "id": "J7v_4kAtjJzk",
-        "outputId": "c6e548c5-aded-4c7b-efba-16fae63e5223"
+        "outputId": "a633407d-252d-4612-fbaa-745ea255ecc1"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fe09e587490>"
+              "<matplotlib.image.AxesImage at 0x7ffa08dbb750>"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 23
         },
         {
           "output_type": "display_data",
@@ -302,7 +290,7 @@
       "metadata": {
         "id": "GMucs2mRjVan"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -315,7 +303,7 @@
       "metadata": {
         "id": "BhnQx6DmjYK2"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -328,9 +316,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rwojQqi9jaqH",
-        "outputId": "6ab1cf52-b26e-43bf-ba4a-d8924c56e1b0"
+        "outputId": "68fd746c-fbc3-47bb-854d-c7f23d6e62e5"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +328,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 26
         }
       ]
     },
@@ -365,7 +353,7 @@
       "metadata": {
         "id": "qYDIJrIXjg8K"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -376,7 +364,7 @@
       "metadata": {
         "id": "de06Tg_9j_Go"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -391,38 +379,42 @@
     {
       "cell_type": "code",
       "source": [
-        "model.fit(X_train, Y_train, batch_size=32, epochs=3, validation_data=(X_test,Y_test))"
+        "model.fit(X_train, Y_train, batch_size=32, epochs=5, validation_data=(X_test,Y_test))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yR-b7LBkkHOg",
-        "outputId": "2a39b1d1-0399-4631-df8f-13172bccd633"
+        "outputId": "b31eb3be-33f2-48f7-a8ba-ba2178d11b24"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/3\n",
-            "1875/1875 [==============================] - 209s 111ms/step - loss: 0.2208 - accuracy: 0.9508 - val_loss: 0.1098 - val_accuracy: 0.9687\n",
-            "Epoch 2/3\n",
-            "1875/1875 [==============================] - 206s 110ms/step - loss: 0.0712 - accuracy: 0.9781 - val_loss: 0.0858 - val_accuracy: 0.9763\n",
-            "Epoch 3/3\n",
-            "1875/1875 [==============================] - 203s 108ms/step - loss: 0.0483 - accuracy: 0.9849 - val_loss: 0.0841 - val_accuracy: 0.9764\n"
+            "Epoch 1/5\n",
+            "1875/1875 [==============================] - 204s 109ms/step - loss: 0.0397 - accuracy: 0.9871 - val_loss: 0.0933 - val_accuracy: 0.9740\n",
+            "Epoch 2/5\n",
+            "1875/1875 [==============================] - 203s 108ms/step - loss: 0.0278 - accuracy: 0.9912 - val_loss: 0.1237 - val_accuracy: 0.9711\n",
+            "Epoch 3/5\n",
+            "1875/1875 [==============================] - 203s 108ms/step - loss: 0.0246 - accuracy: 0.9924 - val_loss: 0.1186 - val_accuracy: 0.9761\n",
+            "Epoch 4/5\n",
+            "1875/1875 [==============================] - 206s 110ms/step - loss: 0.0197 - accuracy: 0.9941 - val_loss: 0.1276 - val_accuracy: 0.9774\n",
+            "Epoch 5/5\n",
+            "1875/1875 [==============================] - 207s 110ms/step - loss: 0.0174 - accuracy: 0.9946 - val_loss: 0.1484 - val_accuracy: 0.9783\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7fe099d794d0>"
+              "<keras.callbacks.History at 0x7ffa074b67d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 41
         }
       ]
     },
@@ -447,16 +439,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HiAAtMSkkXR3",
-        "outputId": "74cc8842-be88-4ed4-bfac-a049133dbb39"
+        "outputId": "2869a9c2-dbf3-490c-a227-2f11bf2f12b7"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Metrics (Test Loss & Test Accuracy): \n",
-            "[0.0840761661529541, 0.9764000177383423]\n"
+            "[0.14840275049209595, 0.9782999753952026]\n"
           ]
         }
       ]
@@ -472,27 +464,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BX0I3W9nkcLj",
-        "outputId": "3e69e886-6552-4714-c7b2-ca8046551774"
+        "outputId": "b9f64cfb-6eb2-4ea9-9c96-0c3ad91d7006"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 98ms/step\n",
-            "[[8.58143245e-09 1.00332121e-11 6.37945385e-09 1.67057499e-06\n",
-            "  1.59242183e-12 1.47204800e-11 3.72646047e-15 9.99987245e-01\n",
-            "  1.13417934e-06 9.93825051e-06]\n",
-            " [3.68254038e-10 5.03727104e-09 1.00000000e+00 3.60117144e-12\n",
-            "  6.33248133e-14 4.96482899e-15 1.08654792e-08 3.30325247e-16\n",
-            "  6.47444121e-12 1.25149273e-18]\n",
-            " [1.56968596e-07 9.99817908e-01 1.22015845e-05 2.22920193e-09\n",
-            "  6.58609770e-06 2.26108637e-06 2.63541637e-07 1.93986423e-07\n",
-            "  1.60438736e-04 2.61838218e-10]\n",
-            " [1.00000000e+00 8.33684661e-16 2.99520936e-10 5.86557577e-14\n",
-            "  8.44937794e-14 2.57982507e-11 2.17040448e-08 1.57022155e-13\n",
-            "  3.72461159e-11 1.53924979e-08]]\n"
+            "1/1 [==============================] - 0s 62ms/step\n",
+            "[[2.6742222e-21 7.7203888e-31 1.6539266e-20 5.0601269e-22 4.8135765e-25\n",
+            "  5.5646722e-23 7.8271530e-36 1.0000000e+00 1.0938551e-19 4.7622395e-16]\n",
+            " [1.1293664e-18 6.2433872e-17 1.0000000e+00 6.4948138e-19 3.3259007e-22\n",
+            "  3.5160467e-27 3.4564981e-10 0.0000000e+00 1.2967274e-19 4.1855699e-33]\n",
+            " [1.9933163e-16 1.0000000e+00 1.3419992e-12 3.2441378e-22 1.2174336e-11\n",
+            "  3.9521829e-14 6.3579174e-15 9.0158078e-13 3.6296541e-14 5.7025353e-20]\n",
+            " [9.9999988e-01 2.0633651e-23 5.9019010e-18 7.7337683e-24 7.9071725e-18\n",
+            "  6.5909822e-18 8.3347814e-08 2.3476237e-25 2.2679202e-14 2.1089506e-12]]\n"
           ]
         }
       ]
@@ -500,7 +488,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(numpy.argmax(prediction, axis=1))\n",
+        "print(np.argmax(prediction, axis=1))\n",
         "print(Y_test[:4])"
       ],
       "metadata": {
@@ -508,9 +496,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YRZtDE2skjxa",
-        "outputId": "9dca45e6-4516-4771-8e8a-d2a8ef79827a"
+        "outputId": "f2450a7a-2c33-4800-8b2a-a917b4e45ee7"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,7 +530,7 @@
       "metadata": {
         "id": "XXSji0ktqJ_K"
       },
-      "execution_count": 16,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -562,13 +550,13 @@
       "metadata": {
         "id": "RMOc0PJ7qVMa"
       },
-      "execution_count": 19,
+      "execution_count": 46,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "img = Image.open(\"sample.png\").convert(\"L\")\n",
+        "img = Image.open(\"four.png\").convert(\"L\")\n",
         "img = img.resize((28, 28))\n",
         "img2arr = np.array(img)\n",
         "img2arr = img2arr.reshape(1, 28, 28, 1)\n",
@@ -582,16 +570,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YBxlUovXqauv",
-        "outputId": "d1658dc9-41d9-4453-8af2-f32d42cd31ef"
+        "outputId": "0b3b5f20-11dc-4696-aa2e-8b8b40574fa4"
       },
-      "execution_count": 22,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 20ms/step\n",
-            "0    6\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "0    4\n",
             "Name: Label, dtype: int64\n"
           ]
         }
